# ps1renderer

./: .gitignore  AUDIO_HW_ACTION_PLAN.md  BIN_FILEFORMAT_SEMANTICS.lnk  BURNING_TO_DISK.lnk.url  BURNING_TO_DISK.md  CMakeLists.txt  CMakePresets.json  COLLISION_ACTION_PLAN.md  CONTROLS.html  LukieD4sPSOneTools.lnk  PS1AUDIO_SEMANTICS.lnk  PS1CUSTOM_MUSIC_SEMANTICS.txt  PS1_ANIMATION_SEMANTICS.txt  PS1_AUDIO_SEMANTICS.lnk  PS1_GTE_LIGHTING_SEMANTICS.txt  PS1_REALHARDWARE.txt  PS1_STAGEGEN_EXTRA_SEMANTICS.lnk  README.md  TIM_FILEFORMAT_SEMANTICS.lnk  animation.c  animation.h  check_content_compatability_ISO9660_8.3.py  iso.xml  iso.xml.template  main.c  music.c  music.h  py_convert_assets.py  py_convert_sounds.py  py_convert_stages.py  py_convert_textures.py  py_delete_build_dir.py  py_run_duckstation.py  sfx.c  sfx.h  sound.c  sound.h  tim_face.S
assets/3shapes/: 3shapes.blend  3shapes.blend1
assets/3shapes/dev/: UniqueThree.PaletteGen
assets/3shapes/textures/: UniqueThree.tim
assets/honda/: honda.mtl
assets/house/: house.mtl
assets/house/dev/: Grass0.BppProject  House0.Palettegen  house.blend  house.blend1
assets/house/textures/: Grass0.tim  House0.tim
assets/object/3shapes/: 3shapes.glb  3shapes.mtl
assets/object/3shapes/dev/: UniqueThree.BppProject  UniqueThree.TimGen
assets/object/3shapes/textures/: UniqueThree.tim
assets/object/arrow/: arrow.glb
assets/object/ball/: ball.glb  ball.mtl
assets/object/cone/: cone.glb
assets/object/cube/: cube.glb
assets/object/honda/: honda.glb
assets/object/house/: house.glb
assets/object/house/dev/: Grass0_2D_View_1001.TimGen  House0.BppProject  House0_2D_View_1001.BppProject  House0_2D_View_1001.TimGen  House0_2D_View_1001_4bpp.PaletteGen
assets/object/house/textures/: Grass0.tim  House0.tim  _House0.tim
assets/object/plane/: plane.glb
assets/object/player/: player.glb
assets/object/roads/: roads.glb
assets/object/roads/dev/: road0.BppProject  road0.PaletteGen  roads.TimGen
assets/object/roads/textures/: roads.tim
assets/object/suzanne/: suzanne.glb
assets/object/testnpc/: testnpc.glb
assets/object/testnpc/dev/: Jimbob_2D_View_1001.BppProject  Jimbob_2D_View_1001.TimGen  Jimbob_2D_View_1001_4bpp.PaletteGen  testnpc.glb
assets/object/testnpc/textures/: Jimbob.tim
assets/sound/bark/: BARK2.VagConfig
assets/sound/caw/: CAW1.vag
assets/sound/door_generic/: DOOR0CLO.VagConfig  DOOR0CLO.vag  DOOR0LOC.vag
assets/sound/instruments/: BASSBOWED.VagConfig  BELLCOSMO.VagConfig  BELLCOSMO.vag  BELLJAV.VagConfig  BELLJAV.vag  CYMBALWACKYCRAS.VagConfig  Cymbal-Wacky-Crash.lnk.url  HOHH.VagConfig  HOHH.vag  ORGANGLASS.vag  PIANOREVERSEC3.VagConfig  PIANOREVERSEC3.vag  Piano-Plus-Dyna-Roadz-C3.lnk.url  SNAREWACKY8K.vag  STRINGALESISFUS.VagConfig  STRINGALESISFUS.vag  VIOLINALESISFUS.VagConfig  VIOLINALESISFUS.vag
assets/sound/jimbob/: JIMBOB.vag
assets/sound/music/: ANTIQURY.OstSong  ANTIQURY.seq  ANTIQURY.vab  FLUXPATH.OstSong  FLUXPATH.seq  FLUXPATH.vab  LAVENDAR.OstSong  LAVENDAR.seq  LAVENDAR.vab  TEST303.OstSong  TEST4.OstSong  TESTING.seq  TESTING.vab  TESTING2.OstSong  TESTING2.seq  TESTING2.vab  TESTING4.OstSong  test3-1.OstSong  test3-2.OstSong  test3.OstSong  testing.OstSong
assets/sound/wind/: WIND.VAG
assets/stage/house_demo/: development.StageGen  house_demo.json  stage.json
assets/stage/jimbob_stage_demo/: development.StageGen  jimbob_stage_demo.json
assets/stage/zflatplane/: development.StageGen  stage.json  zflatplane.StageGen  zflatplane.json
misc/: encode_wind_vag.py
scenes/house_demo/: development.SceneGen  scene.json
sound/: mp3_to_wav.py
sound/MUSIC/: SONG.seq  Something_is_amiss.OstSong  Something_is_amiss.mid  Something_is_amiss.seq  Something_is_amiss.vab  Something_is_amiss_legacy.OstSong
sound/bark/: BARK.vag  BARK1.VagConfig  BARK1.vag  BARK2.vag
sound/caw/: CAW2.vag
sound/instruments/: BASSBOWED.vag  Bass-Bowed.lnk.url  CYMBALWACKYCRAS11K.vag  CYMBALWACKYCRAS4K.vag  ORGANGLASS.VagConfig  Organ-Glass.lnk.url  PIANOPLUSDYNARO.VagConfig  PIANOPLUSDYNARO8K.vag  SNAREWACKY.VagConfig  SNAREWACKY4K.vag  Snare-Wacky.lnk.url
suite/: index.html  start-server.bat.lnk  start.bat
suite/css/: site.css
suite/js/: navbar.js
suite/tools/audio-bank/: PS1AUDIO_SEMANTICS.txt  index.html
suite/tools/audio-bank/css/: tool.css
suite/tools/audio-bank/js/: adpcm.js  app.js  wav.js
suite/tools/audio-ost/: index.html
suite/tools/audio-ost/css/: tool.css
suite/tools/audio-ost/js/: adpcm.js  app.js  midi.js  roll.js  scheduler.js  seqvab.js  song.js  spu.js  vag.js  wav.js
suite/tools/audio-vag/: README.txt  index.html
suite/tools/audio-vag/css/: tool.css
suite/tools/audio-vag/js/: app.js  resample.js  vag.js
suite/tools/image-bpp/: index.html
suite/tools/image-bpp/css/: tool.css
suite/tools/image-bpp/js/: adjust.js  app.js  dither.js  palette.js  project.js  quantizer.js  renderer.js
suite/tools/palette-maker/: PS1TIM_SEMANTICS.txt  index.html
suite/tools/palette-maker/css/: tool.css
suite/tools/palette-maker/js/: app.js  clut.js  image.js  palette.js  project.js  renderer.js  tim_writer.js
suite/tools/scene-gen/: index.html  serve.js  start.bat
suite/tools/scene-gen/css/: tool.css
suite/tools/scene-gen/js/: app.js  dnd_assets.js  drag_scrub.js  history.js  modal.js  mtl_resolver.js  scene_project.js  scene_state.js  tim_reader.js  toast.js  viewer.js
suite/tools/stage-gen/: PS1STAGEGEN_EXTRA_SEMANTICS.txt  index.html  serve.js
suite/tools/stage-gen/css/: tool.css
suite/tools/stage-gen/js/: app.js  dnd_assets.js  drag_scrub.js  fs_assets.js  history.js  mtl_resolver.js  stage_export.js  stage_project.js  stage_state.js  tim_reader.js  viewer.js  vram.js
suite/tools/stage-gen/special/: light.glb  sound.glb  spawn.glb  summon.glb  trigger.glb
suite/tools/tim-gen/: index.html
suite/tools/tim-gen/css/: tool.css
suite/tools/tim-gen/js/: app.js  core_color.js  core_ui.js  core_viewport.js  img_adjust.js  img_dither.js  img_pipeline.js  img_quantizer.js  img_tab.js  pal_model.js  pal_tab.js  project.js  state.js  tabs.js  (+1 more)
